--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Quicksand:wght@500;600;700&display=swap" rel="stylesheet" />
   <title>COURS D’INITIATION INFORMATIQUE N1</title>
 </head>
-<body class="bg-pastel-peach min-h-screen">
+<body class="min-h-screen font-display antialiased">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
